Reser CKEditor colors to avoid Firefox problems
The text may be white on white (invisible) in Firefox.

--- a/resources/css/ckeditor-content.css
+++ b/resources/css/ckeditor-content.css
@@ -1,5 +1,11 @@
 /* Styles for the edited contents (inside the editor iframe). */
 
+body {
+    /* Reset editor colors (Firefox sometimes uses white on white inside editor) */
+    color: #000;
+    backgrounf: #fff;
+}
+
 pre.lcg-exercise {
     background: #eee;
     width: 100%;
